
  * Goswin von Brederlow
    - Add m68k amiga module lists
  * Joey Hess
    - Fix section to be debian-installer, not devel.
    - Add an installedname field to kernel-versions to support
      non-flavoured naming as used in m68k and other kernel debs.
    - Removed autogenerated file debian/control from CVS. It will still be
      in the tarball.
    - Fix build-all.

 -- Joey Hess <joeyh@debian.org>  Fri, 26 Oct 2003 13:53:06 +0100

linux-kernel-di (0.8) unstable; urgency=low

  * Fix broken (doubled) dependency field of ide-modules.
  * modules-list had usb-storage-modules depending on ide-modules;
    but they really depend on ide-core-modules.
  * Dropped the modutils dependency from the kernel image.
  * Add debian/control.stub, package-list, and kernel-versions.
  * Automatically generate control file from new files.
  * Replace module-deps with gen-deps, a program that extracts the module
    deps information from the package-list.
  * Add rules code to generate control, delete it when done, and manage a
    link from control.stub to control at other times, so dpkg-buildpackage
    will be happy.
  * Change section of source package to debian-installer.
  * Remove per-package section settings.
  * Pass -s to debhelper commands.
  * Moved sr_mod.o from scsi-core-modules to scsi-modules, and broke
    cdrom.o out into a cdrom-core-modules, which ide-modules, scsi-modules,
    and cdrom-modules all depend on. This is keep scsi-core-modules from
    depending on ide-modules for cdrom.o (which it did before, though the
    Depends entry was missing, it was in module-deps).
  * Add alpha to kernel-versions, using the 2.4.22-1-generic kernel.
  * Remove all the hard-coded kernel flavour and arch stuff from
    debian/control, getting it from kernel-versions, and supporting multiple
    kernel versions too.
  * Add kernel-names to list the image names on various architectures.
  * Reorganized the modules directory for multi-arch support.