@@ -1,7 +1,10 @@
 #!/bin/sh
 # This is a wrapper script that I use to build all architectures.
+#
 # It expects to have the unpacked kernel packages for various arches in
-# ../alpha, etc. modules.dep files have to be put in there too.
+# ../alpha, etc. modules.dep files have to be put in there too if they are
+# not shipped in the .deb (varies)
+#
 # dpkg-cross must be installed, and so must a cross compiler, or at least
 # something named alpha-linux-gcc that outputs "alpha-linux", etc.
 set -e
