@@ -9,6 +9,9 @@ linux-kernel-di (0.9) UNRELEASED; urgency=low
     - Removed autogenerated file debian/control from CVS. It will still be
       in the tarball.
     - Fix build-all.
+    - Broke make-links and install-files out of debian/rules.
+    - Look in modules/<arch>-<flavour>/ if it exists in preference to
+      plain modules/<arch>/.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 26 Oct 2003 13:53:06 +0100
 
